force-app/main/default/objects/NDOC__Static_Resource_Registry__mdt/NDOC__Static_Resource_Registry__mdt.object-meta.xml
<CustomObject>
    <description>The static resource registry stores metadata records which override behavior within Document Manager.</description>
    <label>Static Resource Registry</label>
    <pluralLabel>Static Resource Registries</pluralLabel>
</CustomObject>