force-app/main/default/objects/NDOC__Static_Resource_Registry__mdt/fields/NDOC__Is_Active__c.field-meta.xml
<CustomField>
    <fullName>NDOC__Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>--DEPRECATED-- The system populates this required checkbox to indicate if the static resource is active. Replcaed by Is_Active_V2__c</description>
    <label>-D Is Active</label>
    <type>Checkbox</type>
</CustomField>