force-app/main/default/objects/NDOC__Static_Resource_Registry__mdt/fields/NDOC__Is_Active_V2__c.field-meta.xml
<CustomField>
    <fullName>NDOC__Is_Active_V2__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The system populates this required checkbox to indicate if the static resource is active.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>