force-app/main/default/objects/NDOC__Static_Resource_Registry__mdt/fields/NDOC__Order_of_Execution__c.field-meta.xml
<CustomField>
    <fullName>NDOC__Order_of_Execution__c</fullName>
    <description>The developer populates this required field with the order of execution of the static resource.</description>
    <label>Order of Execution</label>
    <precision>15</precision>
    <required>true</required>
    <scale>3</scale>
    <type>Number</type>
</CustomField>